--- a/selectDetail.html
+++ b/selectDetail.html
@@ -21,9 +21,9 @@
   </head>
   <body>
     <form id="myForm" onsubmit="handleFormSubmit(this)">
-      <input name="cb" type="checkbox" value="残業が少ない">残業が少ない
-      <input name="cb" type="checkbox" value="交通費全額">交通費全額
-      <input name="cb" type="checkbox" value="家賃補助">家賃補助
+      <input name="cb" type="checkbox" value="">
+      <input name="cb" type="checkbox" value="">
+      <input name="cb" type="checkbox" value="">
       <input name="other" type="input">その他
       <input type="submit" value="Submit" />
     </form>
